syntax = "proto3";

package bilibili.app.playerunite.v1;

import "google/protobuf/any.proto";
import "bilibili/playershared/playershared.proto";

message PlayViewUniteReq {
    bilibili.playershared.VideoVod vod = 1;
    string bvid = 5;
}

message PlayViewUniteReply {
    bilibili.playershared.PlayArcConf play_arc_conf = 2;
    google.protobuf.Any supplement = 5;
    bilibili.playershared.PlayArc play_arc = 6;
    bilibili.playershared.ViewInfo view_info = 9;
}
